--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,11 @@
 {
-  "name": "Figma Plugin Template",
-  "id": "00000000",
-  "api": "1.0.0",
-  "main": "dist/code.js",
-  "ui": "dist/ui.html",
-  "editorType": [
-    "figma",
-    "figjam"
-  ]
+    "name": "ArtyFarty Rijksmuseum",
+    "id": "00000000",
+    "api": "1.0.0",
+    "main": "dist/code.js",
+    "ui": "dist/ui.html",
+    "editorType": [
+        "figma",
+        "figjam"
+    ]
 }
