--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
 	},
 	"dependencies": {
 		"react": "^17.0.2",
-		"react-dom": "^17.0.2"
+		"react-dom": "^17.0.2",
+		"react-figma-plugin-ds": "^2.3.0"
 	},
 	"devDependencies": {
 		"@figma/plugin-typings": "^1.50.0",
