--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
 	"dependencies": {
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
-		"react-figma-plugin-ds": "^2.3.0"
+		"react-figma-plugin-ds": "^2.3.0",
+		"react-range": "^1.8.14"
 	},
 	"devDependencies": {
 		"@figma/plugin-typings": "^1.50.0",
