--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"react-figma-plugin-ds": "^2.3.0",
+		"react-loading": "^2.0.3",
 		"react-range": "^1.8.14"
 	},
 	"devDependencies": {
